[tool.poetry]
name = "rent-crawlers"
version = "0.1.0"
description = ""
authors = ["AlbertLin <albert@dinngo.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
bs4 = "^0.0.2"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
google = "^3.0.0"
google-api-python-client = "^2.156.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
